--- a/templates/decode.html
+++ b/templates/decode.html
@@ -1,1 +1,28 @@
 {% extends "layout.html" %}
+
+{% block scripts %}
+<script src="https://cdn.jsdelivr.net/npm/socket.io-client@2/dist/socket.io.js"></script>
+<script src="{{ url_for('static', filename='main.js') }}"></script>
+{% endblock %}
+
+{% block body %}
+
+<div class="container" style="text-align:center;">
+	<header>
+		<h2 id="Forms">Decode: find a secret message inside the image</h2>
+	</header>
+	<form method="post" enctype="multipart/form-data">
+		<fieldset>
+			<legend>Decode</legend>
+			<div class="form-group">
+				<label for="image-id">Select an image</label>
+				<input type="file" id="image-id" name="file">
+			</div>
+			<div class="form-group">
+				<button class="btn btn-default" type="submit" name="submit" id="submit-id">Decode!</button>
+			</div>
+		</fieldset>
+	</form>
+</div>
+
+{% endblock %}
