--- a/templates/decode.html
+++ b/templates/decode.html
@@ -7,22 +7,17 @@
 
 {% block body %}
 
-<div class="container" style="text-align:center;">
-	<header>
-		<h2 id="Forms">Decode: find a secret message inside the image</h2>
-	</header>
-	<form method="post" enctype="multipart/form-data">
-		<fieldset>
-			<legend>Decode</legend>
-			<div class="form-group">
-				<label for="image-id">Select an image</label>
-				<input type="file" id="image-id" name="file">
-			</div>
-			<div class="form-group">
-				<button class="btn btn-default" type="submit" name="submit" id="submit-id">Decode!</button>
-			</div>
-		</fieldset>
-	</form>
+<div class="container">
+	<h3 class="title"><b>Decode: find a secret message inside an image</b></h3>
 </div>
+
+<form method="post" enctype="multipart/form-data">
+	<div class="row">
+		<label for="image-id">Select an image</label>
+		<input class="u-full-width" type="file" id="image-id" name="file">
+	</div>
+	<input class="button-primary" type="submit" id="submit-id" value="Decode!">
+
+</form>
 
 {% endblock %}
