--- a/templates/encode.html
+++ b/templates/encode.html
@@ -7,26 +7,21 @@
 
 {% block body %}
 
-<div class="container" style="text-align:center;">
-	<header>
-		<h2 id="Forms">Encode: hide a message inside an image</h2>
-	</header>
-	<form method="post" enctype="multipart/form-data">
-		<fieldset>
-			<legend>Encode</legend>
-			<div class="form-group">
-				<label for="image-id">Select an image</label>
-				<input type="file" id="image-id" name="file">
-			</div>
-			<div class="form-group">
-				<label for="message-id">Write a text to hide inside the image</label>
-				<textarea id="message-id" cols="30" rows="10" name="message"></textarea>
-			</div>
-			<div class="form-group">
-				<button class="btn btn-default" type="submit" name="submit" id="submit-id">Encode!</button>
-			</div>
-		</fieldset>
-	</form>
+<div class="container">
+	<h3 class="title"><b>Encode: Hide a message inside an image</b></h3>
 </div>
+
+<form method="post" enctype="multipart/form-data">
+	<div class="row">
+		<label for="image-id">Select an image</label>
+		<input class="u-full-width" type="file" id="image-id" name="file">
+	</div>
+	<div class="row">
+		<label for="message-id">Write a text to hide inside the image</label>
+		<textarea class="u-full-width" id="message-id" name="message"></textarea>
+	</div>
+	<input class="button-primary" type="submit" id="submit-id" value="Encode!">
+
+</form>
 
 {% endblock %}
