--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+
+	<!-- Make the page invisible until all HTML elements have been loaded
+	 to prevent a flash of unstyled content -->
+	<style>
+		html {
+			display: none;
+		}
+	</style>
+
+	<!-- Basic page needs -->
+	<meta charset="utf-8">
 	<title>Steganography Lab</title>
-	<link rel="stylesheet" href="https://unpkg.com/terminal.css@0.7.1/dist/terminal.min.css" />
+
+	<!-- Mobile specific values -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- Load the font -->
+	<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+	<!-- Load skeleton CSS files -->
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/skeleton.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
 
 	{% block scripts %} {% endblock %}
+
 </head>
 
-<body class="terminal">
-	<div class="container">
-		<div class="terminal-nav">
-			<header class="terminal-logo">
-				<div class="logo terminal-prompt">
-					<a href={{ url_for('index') }} class="no-style">Steganography Lab</a>
-				</div>
-			</header>
-			<nav class="terminal-menu">
-				<ul vocab="https://schema.org/" typeof="BreadcrumbList">
-					<li>
-						<a href={{ url_for('about') }} class="menu-item active"><span>About</span></a>
-						<meta property="position">
-					</li>
-				</ul>
-			</nav>
+<body>
+
+	<nav class="navbar">
+		<div class="container">
+			<ul class="navbar-list">
+				<li class="navbar-item"><a class="navbar-link" href="{{ url_for('index') }}">Steganography Lab</a></li>
+				<li class="navbar-item"><a class="navbar-link" href="{{ url_for('encode') }}">Encode</a></li>
+				<li class="navbar-item"><a class="navbar-link" href="{{ url_for('decode') }}">Decode</a></li>
+				<li class="navbar-item"><a class="navbar-link" href="{{ url_for('about') }}">About</a></li>
+			</ul>
 		</div>
+	</nav>
+
+	<div class="container">
+		{% block body %} {% endblock %}
 	</div>
 
-	{% block body %} {% endblock %}
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
 </body>
 
